--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!-- Show main message of the data -->
         <h2>{{ post }}</h2>
         <hr>
-        <p> By : {{ editor }}</p>
+        <p> By: {{ editor }}</p>
+        <p> Editor's Notes: {{ editorNotes() }}</p>
     </div>
 
     <script src="js/script.js"></script>
